--- a/src/style.css
+++ b/src/style.css
@@ -92,3 +92,9 @@ input:focus {
   font-size: 2.4rem;
   font-weight: 700;
 }
+
+.countryCode {
+  font-family: sans-serif;
+  font-size: 1.4rem;
+  margin-left: 1rem;
+}
